Fixes by tree and order

--- a/src/Presentation/WebAdmin/Design/index.html
+++ b/src/Presentation/WebAdmin/Design/index.html
@@ -2311,7 +2311,7 @@
                         </header>
                         <div class="blade-container">
                             <div class="canceled">Canceled</div>
-                            <div class="blade-content __medium-wide">
+                            <div class="blade-content __large-wide">
                                 <div class="blade-inner">
                                     <div class="inner-block">
                                         <div class="form columns clearfix">
@@ -2434,44 +2434,6 @@
                                                                         </div>
                                                                     </div>
                                                                 </div>
-                                                                <ul class="tree-node">
-                                                                    <li class="tree-item">
-                                                                        <div class="tree-block">
-                                                                            <div class="inner">
-                                                                                <div class="tree-el __title">
-                                                                                    <i class="tree-ico fa fa-info-circle"></i>
-                                                                                    PaymentIn #PA04829
-                                                                                </div>
-                                                                                <div class="tree-el __date">
-                                                                                    <i class="tree-ico fa fa-calendar"></i>
-                                                                                    Feb 17, 2015
-                                                                                </div>
-                                                                                <div class="tree-el __price">
-                                                                                    <i class="tree-ico fa fa-money"></i>
-                                                                                    10 USD
-                                                                                </div>
-                                                                            </div>
-                                                                        </div>
-                                                                    </li>
-                                                                    <li class="tree-item">
-                                                                        <div class="tree-block">
-                                                                            <div class="inner">
-                                                                                <div class="tree-el __title">
-                                                                                    <i class="tree-ico fa fa-info-circle"></i>
-                                                                                    PaymentIn #PA04829
-                                                                                </div>
-                                                                                <div class="tree-el __date">
-                                                                                    <i class="tree-ico fa fa-calendar"></i>
-                                                                                    Feb 17, 2015
-                                                                                </div>
-                                                                                <div class="tree-el __price">
-                                                                                    <i class="tree-ico fa fa-money"></i>
-                                                                                    10 USD
-                                                                                </div>
-                                                                            </div>
-                                                                        </div>
-                                                                    </li>
-                                                                </ul>
                                                             </li>
                                                             <li class="tree-item">
                                                                 <div class="tree-block">
@@ -2487,24 +2449,6 @@
                                                                         <div class="tree-el __price">
                                                                             <i class="tree-ico fa fa-money"></i>
                                                                             0 USD
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </li>
-                                                            <li class="tree-item">
-                                                                <div class="tree-block">
-                                                                    <div class="inner">
-                                                                        <div class="tree-el __title">
-                                                                            <i class="tree-ico fa fa-info-circle"></i>
-                                                                            PaymentIn #PA04829
-                                                                        </div>
-                                                                        <div class="tree-el __date">
-                                                                            <i class="tree-ico fa fa-calendar"></i>
-                                                                            Feb 17, 2015
-                                                                        </div>
-                                                                        <div class="tree-el __price">
-                                                                            <i class="tree-ico fa fa-money"></i>
-                                                                            10 USD
                                                                         </div>
                                                                     </div>
                                                                 </div>
