--- a/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-advanced.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-advanced.tpl.html
@@ -33,7 +33,7 @@
                             <div class="form-input">
                                 <ui-select ng-model="blade.currentEntity.country">
                                     <ui-select-match placeholder="Select ...">{{$select.selected.name}}</ui-select-match>
-                                    <ui-select-choices repeat="x.id as x in countries | filter: { name: $select.search }">
+                                    <ui-select-choices repeat="x.code as x in countries | filter: { name: $select.search }">
                                         <span ng-bind-html="x.name | highlight: $select.search"></span>
                                     </ui-select-choices>
                                 </ui-select>
@@ -79,11 +79,11 @@
                             <div class="form-input">
                                 <ui-select ng-model="blade.currentEntity.fulfillmentCenter">
                                     <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
-                                    <ui-select-choices repeat="x.id as x in fulfillmentCenters | filter: { name: $select.search }">
+                                    <ui-select-choices repeat="x in fulfillmentCenters | filter: { name: $select.search }">
                                         <span ng-bind-html="x.name | highlight: $select.search"></span>
                                     </ui-select-choices>
                                 </ui-select>
-                             </div>
+                            </div>
                         </div>
                     </div>
                     <div class="column">
@@ -92,7 +92,7 @@
                             <div class="form-input">
                                 <ui-select ng-model="blade.currentEntity.returnsFulfillmentCenter">
                                     <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
-                                    <ui-select-choices repeat="x.id as x in fulfillmentCenters | filter: { name: $select.search }">
+                                    <ui-select-choices repeat="x as x in fulfillmentCenters | filter: { name: $select.search }">
                                         <span ng-bind-html="x.name | highlight: $select.search"></span>
                                     </ui-select-choices>
                                 </ui-select>
@@ -101,20 +101,16 @@
                     </div>
                 </div>
                 <div class="form columns clearfix">
-                    <div class="column">
-                        <div class="form-group">
-                            <label class="form-label">Operational timezone</label>
-                            <div class="form-input">
-                                <ui-select ng-model="blade.currentEntity.timeZone">
-                                    <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
-                                    <ui-select-choices repeat="x.name as x in timeZones | filter: { name: $select.search }">
-                                        <span ng-bind-html="x.name | highlight: $select.search"></span>
-                                    </ui-select-choices>
-                                </ui-select>
-                            </div>
+                    <div class="form-group">
+                        <label class="form-label">Operational timezone</label>
+                        <div class="form-input">
+                            <ui-select ng-model="blade.currentEntity.timeZone">
+                                <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
+                                <ui-select-choices repeat="x.id as x in timeZones | filter: { name: $select.search }">
+                                    <span ng-bind-html="x.name | highlight: $select.search"></span>
+                                </ui-select-choices>
+                            </ui-select>
                         </div>
-                    </div>
-                    <div class="column">
                     </div>
                 </div>
 
