--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/catalog-property-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/catalog-property-detail.tpl.html
@@ -8,7 +8,10 @@
                     </legend>
                     <div class="form-group" ng-repeat="prop in properties = (blade.currentEntity.properties | filter: {type:propGroup.type})">
                         <label class="form-label" for="">
-                            <a ng-show="prop.isManageable" href="" ng-click="editProperty(prop)">{{prop.name}}</a>
+                            {{prop.name}}
+                            <a ng-show="prop.isManageable" href="" ng-click="editProperty(prop)">
+                                <i class="form-ico fa fa-pencil"></i>
+                            </a>
                             <span ng-show="!prop.isManageable">{{prop.name}}</span>
                         </label>
                         <va-property2 ng-model="prop" get-prop-values="getPropValues" />
