Delete logo VC, add module files

--- a/src/Presentation/WebAdmin/Design/index.html
+++ b/src/Presentation/WebAdmin/Design/index.html
@@ -2893,6 +2893,123 @@
                             </div>
                         </div>
                     </div>
+                    <div class="blade">
+                        <header class="blade-head">
+                            <div class="blade-status"></div>
+                            <div class="blade-nav">
+                                <ul class="menu __inline">
+                                    <li class="menu-item __minimize">
+                                        <button>
+                                            Minimize
+                                        </button>
+                                    </li>
+                                    <li class="menu-item __maximize">
+                                        <button>
+                                            Maximize
+                                        </button>
+                                    </li>
+                                    <li class="menu-item __close __disabled">
+                                        <button disabled="disabled">
+                                            Close
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="blade-t __secondary">
+                                <i class="blade-t_ico fa fa-folder"></i>
+                                <p class="blade-t_head">Edit Apple/Timber</p>
+                                <p class="blade-t_subhead">Theme asset list</p>
+                            </div>
+                            <div class="blade-toolbar">
+                                <ul class="menu __inline">
+                                    <li class="menu-item">
+                                        <button class="menu-btn">
+                                            <i class="menu-ico fa fa-refresh"></i>
+                                            Refresh
+                                        </button>
+                                    </li>
+                                    <li class="menu-item">
+                                        <button class="menu-btn">
+                                            <i class="menu-ico fa fa-plus"></i>
+                                            Add
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
+                        </header>
+                        <div class="blade-container">
+                            <div class="blade-content">
+                                <div class="blade-inner">
+                                    <div class="inner-block">
+                                        <ul class="list __files">
+                                            <li class="list-item">
+                                                <a class="list-block">
+                                                    <i class="list-ico fa fa-folder"></i>
+                                                    <span class="list-name">Layout</span>
+                                                </a>
+                                            </li>
+                                            <li class="list-item">
+                                                <a class="list-block">
+                                                    <i class="list-ico fa fa-folder"></i>
+                                                    <span class="list-name">Templates</span>
+                                                </a>
+                                            </li>
+                                            <li class="list-item __selected">
+                                                <a class="list-block">
+                                                    <i class="list-ico fa fa-folder-open"></i>
+                                                    <span class="list-name">Assets</span>
+                                                </a>
+                                                <ul class="list __sub">
+                                                    <li class="list-item">
+                                                        <a class="list-block">
+                                                            <i class="list-ico fa fa-file-text"></i>
+                                                            <span class="list-name">apple-touch-icon-114x114.png</span>
+                                                        </a>
+                                                    </li>
+                                                    <li class="list-item">
+                                                        <a class="list-block">
+                                                            <i class="list-ico fa fa-file-text"></i>
+                                                            <span class="list-name">apple-touch-icon-114x114.png</span>
+                                                        </a>
+                                                    </li>
+                                                    <li class="list-item">
+                                                        <a class="list-block">
+                                                            <i class="list-ico fa fa-file-text"></i>
+                                                            <span class="list-name">apple-touch-icon-114x114.png</span>
+                                                        </a>
+                                                    </li>
+                                                    <li class="list-item">
+                                                        <a class="list-block">
+                                                            <i class="list-ico fa fa-file-text"></i>
+                                                            <span class="list-name">apple-touch-icon-114x114.png</span>
+                                                        </a>
+                                                    </li>
+                                                    <li class="list-item">
+                                                        <a class="list-block">
+                                                            <i class="list-ico fa fa-file-text"></i>
+                                                            <span class="list-name">apple-touch-icon-114x114.png</span>
+                                                        </a>
+                                                    </li>
+                                                    <li class="list-item">
+                                                        <a class="list-block">
+                                                            <i class="list-ico fa fa-file-text"></i>
+                                                            <span class="list-name">apple-touch-icon-114x114.png</span>
+                                                        </a>
+                                                    </li>
+                                                    <li class="list-item">
+                                                        <a class="list-block">
+                                                            <i class="list-ico fa fa-file-text"></i>
+                                                            <span class="list-name">apple-touch-icon-114x114.png</span>
+                                                        </a>
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </article>
         </div>
