-FIX order. dialog

--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/dialogs/cancelOperation-dialog.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/dialogs/cancelOperation-dialog.tpl.html
@@ -6,6 +6,6 @@
 </div>
 <textarea ng-model="cancelReason"></textarea>
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="yes()">Confirm cancel</button>
+    <button class="btn btn-primary" ng-click="yes()">Confirm</button>
     <button class="btn btn-default" ng-click="cancel()">Cancel</button>
 </div>
