--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/customer-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/customer-detail.tpl.html
@@ -11,7 +11,7 @@
                 <div class="form-group">
                     <label class="form-label">Birthday</label>
                     <div class="form-input __calendar">
-                        <input type="text" class="form-control" ng-model="blade.currentEntity.birthDate" datepicker-popup="{{format}}" name="bd" is-open="datepickers.bd" datepicker-options="dateOptions" close-text="Close" />
+                        <input type="text" class="form-control" ng-model="blade.currentEntity.birthDate" datepicker-popup="{{format}}" name="bd" is-open="datepickers.bd" max-date="today" datepicker-options="dateOptions" close-text="Close" />
                         <button class="btn" type="button" ng-click="open($event,'bd')">
                             <i class="btn-ico fa fa-calendar"></i>
                         </button>
